--- a/new-client/package.json
+++ b/new-client/package.json
@@ -13,6 +13,7 @@
     "@next/font": "13.1.1",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "jquery": "^3.6.3",
