--- a/new-client/package.json
+++ b/new-client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "animate.css": "^4.1.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "eslint": "8.31.0",
@@ -21,6 +22,7 @@
     "next": "13.1.1",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0"
   }
 }
